--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/style.css
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/style.css
@@ -66,10 +66,7 @@
     color: black;
   }
 
-  #menudiscesa{
-    width: auto;
-    height: auto;
-  }
+
 
   /*Stile footer e elementi del footer*/
   footer {
@@ -113,4 +110,14 @@
     display: inline-block;
     margin-left: 10px;
     font-size: 0.89em;
+  }
+  #menucheck {
+    display: block; /* Imposta il menu a blocco per posizionare gli item uno sotto l'altro */
+    padding: 10px; /* Aggiunge spazio tra gli item */
+    width: 200px; /* Imposta una larghezza fissa al contenitore */
+  }
+
+  label {
+      display: block; /* Imposta i label come blocchi per occupare l'intera larghezza del menu */
+      margin-bottom: 5px; /* Aggiunge spazio tra gli item */
   }
