--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/stile.css
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/stile.css
@@ -113,7 +113,7 @@ body {
   background-color: rgb(255, 196, 157);
 }
 
-/*Stile footer e elementi del footer*/
+/*Stile footer e elementi del footer prova*/
 footer {
   background-color: #fc9b00;
   color: #fff;
