--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/stile.css
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/stile.css
@@ -2,227 +2,240 @@
 
 /* Elementi Navbar*/
 .navbar {
-    font-family: 'Lucida Console', sans-serif;
-    padding: 10px;
-    width: 100%;
-    display: flex;   
+  font-family: 'Lucida Console', sans-serif;
+  padding: 10px;
+  width: 100%;
+  display: flex;   
 }
 .nav-link {
-    font-family: 'Lucida Console', sans-serif;
-    font-size: 20px;
+  font-family: 'Lucida Console', sans-serif;
+  font-size: 20px;
 }
 .navbar-light .navbar-toggler {
-    color: rgba(0,0,0,.5);
-    border-color: rgba(0,0,0,.1);
-    height: 46.6px;
+  color: rgba(0,0,0,.5);
+  border-color: rgba(0,0,0,.1);
+  height: 46.6px;
 }
 a img {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 body {
-    background-size: cover;
-    background-image: url(/Municipi/aperitivo-con-i-bambini-a-roma-photoaidcom-blur\ \(1\).jpg)
-    
+  background-size: cover;
+  background-image: url(/Municipi/aperitivo-con-i-bambini-a-roma-photoaidcom-blur\ \(1\).jpg)
+  
 }
 
 /*Icone font awesome*/
 .fa-user {
-    margin-top: 7px;
-    margin-right: 30px;
+  margin-top: 7px;
+  margin-right: 30px;
 }
 .fa-arrow-right-from-bracket {
-    margin-top: 7px;
-    margin-left: 30px;
+  margin-top: 7px;
+  margin-left: 30px;
 }
 .fa-heart {
-    margin-top: 7px;
-    margin-left: 30px;
+  margin-top: 7px;
+  margin-left: 30px;
 }
 
 /*Pagina divisa con un container formato da una riga e due colonne*/
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0%;  
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0%;  
 }
 .container{
-    display: flex;
-    justify-content: center;
-    height: 700px;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    max-width: 100%;
-    max-height: 100%;
-    width: 1000vw;    
+  display: flex;
+  justify-content: center;
+  height: 700px;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  max-width: 100%;
+  max-height: 100%;
+  width: 1000vw;    
 }
 .left-column {
-    width: 400px; 
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    margin-right: 100px;
+  width: 400px; 
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  margin-right: 100px;
 }
 .right-column {
-    width: 750px;
-    height: 600px;
-    overflow-y: scroll;
-    max-width: 100%;
-    max-height: 100%;
-    background-color: lightgrey;
-    border: 2px solid #999898;
-    border-radius: 10px;
+  width: 750px;
+  height: 600px;
+  overflow-y: scroll;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: lightgrey;
+  border: 2px solid #999898;
+  border-radius: 10px;
 }
 
 /*Nella colonna di sinistra c'è la mappa che gestiamo tramite il suo id*/
 #map {
-    height: 400px; 
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    border: 2px solid #727272;
-    border-radius: 10px;
-    position: relative;
+  height: 400px; 
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  border: 2px solid #727272;
+  border-radius: 10px;
+  position: relative;
 }
 
 /*Stile scrollbar list-container a dx*/
 .right-column::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 .right-column::-webkit-scrollbar-track {
-    background: #ccc;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+  background: #ccc;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
 }
 .right-column::-webkit-scrollbar-thumb {
-    background: #fc9b00;
-    border-radius: 10px;
+  background: #fc9b00;
+  border-radius: 10px;
 }
 
 /*Bottone nome user sulla navbar*/
 .btn {
-    font-family: 'Lucida Console', sans-serif;
-    line-height: 2; 
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: .30rem;
-    color: rgba(0,0,0,.5);
-    border-color: rgba(0,0,0,.1);
-    margin-left: 870px;
+  font-family: 'Lucida Console', sans-serif;
+  line-height: 2; 
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: .30rem;
+  color: rgba(0,0,0,.5);
+  border-color: rgba(0,0,0,.1);
+  width: auto;
 }
 /*Azione bottone dopo il click*/
 .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
-    color: #000000;
-    background-color: transparent;
-    border-color: #4e555b;
+  color: #000000;
+  background-color: transparent;
+  border-color: #4e555b;
 }
 
-/*Bottone per menù a discesa della navbar*/
-.dropdown-menu {
-    position: absolute;
-    left: 85%;
-    background-color: rgb(255, 196, 157);
+/*Menù a discesa sulla navbar con nome utente*/
+#usermenu {
+  position: absolute;
+  left: 85%;
+  background-color: rgb(255, 196, 157);
 }
 /*Azione entrambi i bottoni se ci passi sopra con il cursore*/
 #dropdownMenuButton:hover {
-    background-color: rgb(255, 196, 157);
+  background-color: rgb(255, 196, 157);
 }
 #togglerButton:hover {
-    background-color: rgb(255, 196, 157);
+  background-color: rgb(255, 196, 157);
+}
+
+.circular-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px; /* Imposta la larghezza del pulsante circolare */
+  height: 50px; /* Imposta l'altezza del pulsante circolare */
+  background-color: rgb(255, 196, 157); /* Colore di sfondo del pulsante */
+  color: #fff; /* Colore del testo del pulsante */
+  border-radius: 50%; /* Imposta il border-radius al 50% per renderlo circolare */
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 /*MEDIA QUERY PER RENDERE LA PAGINA RESPONSIVE*/
 /* Per schermi di larghezza massima di 767px */
 @media (max-width: 767px) {
-    .nav-link {
-      font-size: 16px;
-    }
-    .navbar {
-      flex-direction: column;
-      align-items: center;
-    }
-    .left-column {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-    .right-column {
-      width: 100%;
-      height: auto;
-      max-height: none;
-      overflow-y: visible;
-      border: none;
-      border-radius: 0;
-      background-color: transparent;
-    }
-    #map {
-      height: 300px;
-    }
-    .btn {
-      margin-left: 0;
-    }
+  .nav-link {
+    font-size: 16px;
   }
-  
-  /* Per schermi di larghezza compresa tra 768px e 991px */
-  @media (min-width: 768px) and (max-width: 991px) {
-    .nav-link {
-      font-size: 18px;
-    }
-    .container {
-      flex-direction: column;
-      align-items: center;
-      height: auto;
-    }
-    .left-column {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-    .right-column {
-      width: 100%;
-      height: auto;
-      max-height: none;
-      overflow-y: visible;
-      border: none;
-      border-radius: 0;
-      background-color: transparent;
-    }
-    #map {
-      height: 300px;
-    }
+  .navbar {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  /* Per schermi di larghezza maggiore di 991px */
-  @media (min-width: 992px) {
-    .nav-link {
-      font-size: 20px;
-    }
-    .container {
-      flex-direction: row;
-      justify-content: center;
-      align-items: stretch;
-      height: 700px;
-    }
-    .left-column {
-      width: 400px;
-      margin-right: 100px;
-      margin-bottom: 0;
-    }
-    .right-column {
-      width: 750px;
-      height: 600px;
-      overflow-y: scroll;
-      max-height: calc(100vh - 170px);
-      background-color: lightgrey;
-      border: 2px solid #999898;
-      border-radius: 10px;
-    }
-    #map {
-      height: 400px;
-      max-height: calc(100vh - 170px);
-    }
-    .btn {
-      margin-left: 870px;
-    }
+  .left-column {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
   }
+  .right-column {
+    width: 100%;
+    height: auto;
+    max-height: none;
+    overflow-y: visible;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+  }
+  #map {
+    height: 300px;
+  }
+  .btn {
+    margin-left: 0;
+  }
+}
+
+/* Per schermi di larghezza compresa tra 768px e 991px */
+@media (min-width: 768px) and (max-width: 991px) {
+  .nav-link {
+    font-size: 18px;
+  }
+  .container {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+  .left-column {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .right-column {
+    width: 100%;
+    height: auto;
+    max-height: none;
+    overflow-y: visible;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+  }
+  #map {
+    height: 300px;
+  }
+}
+
+/* Per schermi di larghezza maggiore di 991px */
+@media (min-width: 992px) {
+  .nav-link {
+    font-size: 20px;
+  }
+  .container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    height: 700px;
+  }
+  .left-column {
+    width: 400px;
+    margin-right: 100px;
+    margin-bottom: 0;
+  }
+  .right-column {
+    width: 750px;
+    height: 600px;
+    overflow-y: scroll;
+    max-height: calc(100vh - 170px);
+    background-color: lightgrey;
+    border: 2px solid #999898;
+    border-radius: 10px;
+  }
+  #map {
+    height: 400px;
+    max-height: calc(100vh - 170px);
+  }
+  .btn {
+    margin-left: 870px;
+  }
+}
