Pulsante like e preferiti per l'amministratore

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/style.css
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/style.css
@@ -150,3 +150,12 @@
     margin-left: 10px;
     font-size: 0.89em;
   }
+
+ #like {
+    color:black;
+    display: inline-block;
+    font-size: 0.89em;
+  }
+
+  
+  
